--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,12 +1,11 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: Billy Jacoby
+avatar: /static/images/billy-avatar.png
+occupation: Technical Lead / Senior Fullstack Engineer
+email: billyjacoby@gmail.com
+twitter: https://x.com/billyjacoby
+linkedin: https://www.linkedin.com/in/bllyjacoby
+github: https://github.com/billyjacoby
 ---
 
 Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
