chore: filter draft, show lastmod, update logo color

--- a/data/blog/clone-vm-proxmox.mdx
+++ b/data/blog/clone-vm-proxmox.mdx
@@ -1,9 +1,11 @@
 ---
 title: How to clone a VM in Proxmox
 date: '2020-05-27'
+lastmod: '2021-06-27'
 tags: ['linux', 'devops']
 draft: false
 summary: Step by step instructions for how to clone a VM in Proxmox
+canonicalUrl: https://billyjacoby.com/clone-vm-proxmox
 ---
 I generally store one VM for my most popular operating systems as a spun down clone on my Proxmox host. This makes it super simple for me to spin up a fresh VM in case I want to try something new, or if i need to isolate and troubleshoot a problem I've been having on a different guest.
 
