chore: update about content

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -8,8 +8,8 @@ linkedin: https://www.linkedin.com/in/bllyjacoby
 github: https://github.com/billyjacoby
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Billy Jacoby is an experienced full-stack developer with a focus on building performant, mobile-friendly applications. He has strong problem-solving skills and a determination to learn and stay up to date with the latest technologies.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+He has experience in architecting mobile and web applications from the ground up, as well as updating legacy applications to stay performant and on the cutting edge.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+Billy has successfully led engineering teams of all sizes to accomplish the goal of building novel and interesting projects.
