--- a/data/blog/gatsby-theme/introduction.mdx
+++ b/data/blog/gatsby-theme/introduction.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Building a GatsbyJS Theme - Introduction"
-date: "2019-05-05"
-tags: ["webdev"]
+title: 'Building a GatsbyJS Theme - Introduction'
+date: '2019-05-05'
+tags: ['webdev']
 draft: false
 summary: Introduction to creating your own GatsbyJS theme.
 ---
